--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require": {
     "php": ">=7.4",
     "guzzlehttp/guzzle": "^7.0",
-    "illuminate/support": "^8.0|^9.0|^10.0"
+    "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
   },
   "extra": {
     "laravel": {
